# Oxyde_FM

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  Volume  tauri.conf.json  test_office_thumb.rs  test_regex.rs  test_strip.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: archive.rs  clipboard.rs  config.rs  duplicates.rs  icons.rs  io.rs  mod.rs  network.rs  ops.rs  search.rs  session.rs  sidebar.rs  system.rs  system_verb.rs  thumbnails.rs
src-tauri/src/models/: config.rs  error.rs  file_entry.rs  history.rs  mod.rs  progress.rs  session.rs  transaction.rs
src-tauri/src/systems/: file_ops.rs  mod.rs  quick_access_watcher.rs
src-tauri/src/utils/: archive.rs  hardware.rs  mod.rs  path_security.rs  thumbnails.rs
src/actions/: archiveActions.ts  driveActions.ts  fileActions.ts  index.ts
src/components/dialogs/: ConfirmDialog.tsx  ConflictDialog.tsx  DisconnectNetworkDriveDialog.tsx  DuplicateSearchDialog.tsx  InputDialog.tsx  MapNetworkDriveDialog.tsx  PropertiesDialog.tsx  SearchDialog.css  SearchDialog.tsx
src/components/file-list/: DateFilterMenu.tsx  ExtensionFilterMenu.tsx  FileHeader.tsx  FilePanel.css  FilePanel.tsx  FilePanelFooter.tsx  FilePanelHeader.tsx  LocationFilterMenu.tsx  NameFilterMenu.tsx  RenameInput.tsx  ResizeHandle.tsx  SelectionMarquee.tsx  SizeFilterMenu.tsx  VirtualizedFileList.tsx
src/components/layout/: DualPanelLayout.tsx  PathBar.css  PathBar.tsx  SettingsMenu.tsx  Sidebar.css  (+5 more)
src/config/: columnDefinitions.ts
src/context/: AppContext.tsx  DialogContext.tsx  KeybindingContext.tsx  PanelContext.tsx  TabsContext.tsx
src/hooks/: index.ts  useAppHandlers.ts  useAutoFitColumns.ts  useClipboard.ts  useDragDrop.ts  useDraggable.ts  useFavorites.ts  useFileDrop.ts  useFileItemState.ts  useFileOperations.ts  useFileStats.ts  useFileSystem.ts  useGlobalShortcuts.ts  useNativeDragDrop.ts  useNavigation.ts  useNotifications.ts  usePanel.ts  usePanelComparison.ts  usePanelSearch.ts  useResizable.ts  useRustConfig.ts  useRustSession.ts  useSelection.ts  useSelectionMarquee.ts
src/services/: ActionService.ts
src/styles/: global.css
src/types/: actions.ts  index.ts
src/utils/: archive.ts  drive.ts  error.ts  fileIcons.tsx  format.ts  iconMapper.tsx  path.ts  pdf.ts
(+39 files in other folders)
