[package]
name = "oxyde-fm"
version = "1.0.3"
description = "Modern and fast file manager"
authors = ["Carlton2001"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "oxyde_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tokio = { version = "1", features = ["sync", "time"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1.1"
glob = "0.3.1"
walkdir = "2.5.0"
trash = "3.3.1"
image = "0.25.1"
hex = "0.4.3"
base64 = "0.22.1"
fs_extra = "1.3.0"
tauri-plugin-window-state = "2" # or appropriate version for Tauri v2
tauri-plugin-fs = "2.4.5"
zip = "2.2.0"
sevenz-rust = "0.6.1"
tar = "0.4.40"
flate2 = "1.0.30"
xz2 = "0.1.7"
time = { version = "0.3", features = ["formatting", "macros"] }
zstd = "0.13.3"
mtzip = { version = "4.0.3", features = ["rayon"] }
bzip2 = "0.6.1"
lazy_static = "1.5.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.20.0", features = ["serde", "v4"] }
chrono = { version = "0.4.43", features = ["serde"] }
percent-encoding = "2.3.1"
regex = "1.10"
unicode-normalization = "0.1.23"
iso9660_core = { version = "0.1.0", features = ["std"] }
blake3 = "1.8.3"
rayon = "1.11.0"
dashmap = "6.1.0"
once_cell = "1.19.0"
tauri-plugin-updater = "2.10.0"
tauri-plugin-process = "2"

[dependencies.windows]
version = "0.61.3"
features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_Security",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_Globalization",
]


[dev-dependencies]
tempfile = "3.10"
